# mlprojects

./: .gitignore  app.py  chunk.py  db.py  pyproject.toml  retriever.py
agent/: main.py
books/: civic-education.docx
db/chroma_db/: chroma.sqlite3
rag/: app.py  pyproject.toml
