[project]
name = "naive-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "George",email = "gofy6566@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "langchain (>=1.1.3,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.1.1,<2.0.0)",
    "chromadb (>=1.3.5,<2.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pdfplumber (>=0.11.8,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
