[project]
name = "ml"
version = "0.1.0"
description = "Project for ml practice"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
   "langchain-classic>=1.0.1",
   "langchain-community>=0.4.1",
   "langchain-core>=1.2.6",
   "langchain-huggingface>=1.2.0",
   "langchain-openai>=1.1.7",
   "langgraph>=1.0.5",
   "python-dotenv>=1.2.1",
]
